   - Modal screens no longer flash invisible children when rejecting a focus change.
   - Finally added StarSonata patch with table element and TabControl additions. Table is based on MultiColor listbox by Acki, and has loads of changes by CuteAlien.

-------------------------------------------
Changes in version 1.4.1 (??? 2008)

 - Fixed clipping of menu, toolbar and combo box GUI elements, reported by greenya
   - setNotClipped now applies all the way up to the root of the GUI environment, rather than just to the next parent 

 - Made new scene managers use the original manager's GUIEnvironment, reported by MasterGod

 - Fixed IGUICheckBox::setEnabled, reported by Dorth

 - Fixed the FollowSpline animator to avoid crashes when only one waypoint is given.

 - OpenGL VolumeShadow now uses glPolygonOffset to avoid zbuffer artifacts.

 - Fixed meshbuffer corruption in append methods.

 - Fixed mem leaks in irrArray.

 - Fixed minor bugs in ISceneNode and ISceneManager.

 - Fixed the MeshCache handling of GeometryCreator meshes.

 - Terrain LOD bugfix.

 - Some Collada 1.3 loader enhancements and bug fixes.

 - Fixed a bug in CGUISpriteBank which caused a crash when a non-looping animated sprite reached the end of its animation.

 - Enhanced the .obj loader with the patch from ryanclark. This allows for recalculation of smoothed normals of the mesh, also should decrease the tri count on some meshes.

 - Avoid the global Logger to be destroyed too early.

 - Function setbit was renamed to setbit_cond to avoid name clashes.

 - Fixed .x animations with multiple references to the same joint from different meshes.

 - Support for Milkshape 1.8 files, also with multiple weights per joint.

 - The config file now also supports _IRR_OSX_PLATFORM_ and _IRR_USE_OSX_DEVICE_. This allows to use the Linux device (X11 support) on OSX.

 - Avoid terrain scene node crash when heightmap cannot be loaded.

 - Speed improvements for WaterSceneNode.
