@@ -49,6 +49,8 @@ Changes in version 1.5 (... 2008)
 -------------------------------------------
 Changes in version 1.4.1 (??? 2008)
 
+ - Fixed bug in CBillboardSceneNode::setColor, reported by rogerborg
+
  - Fixed clipping of menu, toolbar and combo box GUI elements, reported by greenya
    - setNotClipped now applies all the way up to the root of the GUI environment, rather than just to the next parent 
 
